# Speculative-Decoding

./: .gitignore  CLAUDE.md  infer.py  pyproject.toml
.claude/: settings.local.json
docs/: 01-inference-basics.md  02-speculative-theory.md  03-speculative-impl.md  04-nasd-theory.md  05-nasd-impl.md  06-tricks-and-optimizations.md  07-performance-benchmarks.md  README.md  api-reference.md  plan.md  refer.md
ngram_assisted/: ngram_storage.py
sampling/: speculative_decoding.py
