[project]
name = "speculative-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "modelscope>=1.0.0",
    "quanto>=0.2.0",
    "rich>=14.2.0",
    "sentencepiece>=0.2.1",
    "termcolor>=3.3.0",
    "tokenizers>=0.22.2",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "optimum-quanto",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true